[package]
name = "tcp-client"
version = "0.0.6"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "Convenient client-side TCP service. Based on tcp-handler"
readme = "README.md"
license = "(MIT OR Apache-2.0) AND BSD-3-Clause"
repository = "https://github.com/xuxiaocheng0201/tcp-handler/tree/client"
documentation = "https://docs.rs/tcp-client/"
categories = ["network-programming"]
keywords = ["tcp", "network", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "~0.1"
thiserror = "^1"
tokio = { version = "^1", features = ["macros", "net", "time", "sync"] }
tcp-handler = "~0.5"
serde = { version = "^1", features = ["derive"], optional = true }

[features]
default = []

[build-dependencies]
reportme = "~0.2"

[dev-dependencies]
tokio = { version = "^1", features = ["rt-multi-thread"]}

[profile.dev.package.num-bigint-dig]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]
