[package]
name = "tcp-client"
version = "0.1.1"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "Convenient client-side TCP service. Based on tcp-handler."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/tcp-handler/tree/client"
documentation = "https://docs.rs/tcp-client/"
categories = ["network-programming"]
keywords = ["tcp", "network", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "^1"
thiserror = "^1"
tokio = { version = "^1", features = ["net"] }
bytes = "^1"
variable-len-reader = { version = "^3", default-features = false, features = ["std-comp", "sync_string"] }
tcp-handler = { version = "^1.0", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }

[build-dependencies]
reportme = ">=0.2"

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread"]}

[profile.dev.package.num-bigint-dig]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
